[workspace.package]
version = "0.0.3"
authors = ["Fastnear Inc <hello@fastnear.com>"]
edition = "2021"
repository = "https://github.com/fastnear/libs"
rust-version = "1.77.0"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "flat-state",
    "neardata-fetcher",
    "primitives"
]

[workspace.dependencies]
near-indexer-primitives = "0.23"
near-primitives = "0.23"
near-crypto = "0.23.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_with = { version = "3.0", features = ["base64"] }
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.38", features = ["time", "sync", "rt-multi-thread"] }
tracing = { version = "0.1.13", features = ["log"] }
borsh = { version = "1.5.0", features = ["derive"] }
near-jsonrpc-client = "0.10"
near-jsonrpc-primitives = "0.23.0"
near-chain-configs = "0.23.0"
halfbrown = "0.2.5"
