[package]
name = "fastnear-flat-state"
description = "This crate provides a flat state that is being updated from the neardata.xyz"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
borsh.workspace = true
near-crypto.workspace = true
serde_json.workspace = true
serde_with.workspace = true

near-chain-configs = { workspace = true, optional = true }

near-jsonrpc-client = { workspace = true, optional = true }
near-jsonrpc-primitives = { workspace = true, optional = true }

fastnear-primitives = { version = "0.2.0", path = "../primitives" }
fastnear-neardata-fetcher = { version = "0.2.0", path = "../neardata-fetcher", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.0"
tempfile = "3"

[features]
default = ["rpc", "statedump"]
statedump = ["dep:fastnear-neardata-fetcher", "dep:near-chain-configs"]
rpc = ["dep:near-jsonrpc-client", "dep:near-jsonrpc-primitives"]

[[example]]
name = "fetch_from_rpc"
required-features = ["rpc"]

[[example]]
name = "from_state_dump"
required-features = ["statedump"]

[[example]]
name = "state_storage"

[[example]]
name = "state_loader"
