[package]
name = "fastnear-neardata-fetcher"
description = "This crate provides a fetcher to retrieve data from neardata.xyz"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tar.workspace = true
flate2.workspace = true
serde_json.workspace = true

fastnear-primitives = { version = "0.2.0", path = "../primitives" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3"

[[example]]
name = "simple_fetcher"
